test/compile_errors/err_derive_deserialize_field_without_deserialize.w
//! expect-error: unknown method 'deserialize' for type 'NotDeserializable'

use std.json

type NotDeserializable {
    value: i32,
}

@[derive(Deserialize)]
type Wrapper {
    value: NotDeserializable,
}

fn main:
    let doc = JsonDocument.parse("{\"value\":{\"value\":1}}")
    let _wrapper = Wrapper.deserialize(doc.root())
